istio-ingress-gateway/ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vote-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-service
spec:
  hosts:
  - "*"
  gateways:
  - vote-gateway
  http:
  - match:
    - uri:
        prefix: "/vote/"
    route:
    - destination:
        host: vote-service.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-web
spec:
  hosts:
  - "*"
  gateways:
  - vote-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vote-web.default.svc.cluster.local
